--- a/index.html
+++ b/index.html
@@ -11,52 +11,57 @@
     <title>Проект Mesto. (Я. Практикум / JS / Sprint 4)</title>
   </head>
   <body class="page">
+    <!-- В хедере разобраться с отступами логотипа в адаптиве -->
     <header class="header">
       <img  class="header__logo" src="./images/logo.svg" alt="Логотип проекта Место">
     </header>
     <main class="content">
-      <section class="profile">
+    <!-- В профиле надо будет поправить отступы для кнопки редактирования -->
+    <section class="profile">
         <img class="profile__avatar" src="./images/avatar.jpg" alt="Жак-Ив Кусто - исследователь океана">
         <h1 class="profile__name">Жак-Ив Кусто</h1>
         <p class="profile__job">Исследователь океана</p>
         <button class="profile__button-edit" type="button"></button>
         <button class="profile__button-add" type="button"></button>
       </section>
-      <section class="gallery">
+
+    <!-- В галерее будет замена карточек 4-6, в будущем - CRUD карточек -->
+    <section class="gallery">
         <ul class="elements">
           <li class="element">
-            <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевск">
+            <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевск" title="Карачаевск">
             <h2 class="element__title">Карачаевск</h2>
             <button class="element__button-like" type="button"></button>
           </li>
           <li class="element">
-            <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус">
+            <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус" title="Гора Эльбрус">
             <h2 class="element__title">Гора Эльбрус</h2>
             <button class="element__button-like" type="button"></button>
           </li>
           <li class="element">
-            <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
+            <img class="element__image" src="./images/dombai.jpg" alt="Домбай" title="Домбай">
             <h2 class="element__title">Домбай</h2>
             <button class="element__button-like" type="button"></button>
           </li>
           <li class="element">
-            <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус">
+            <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус" title="Гора Эльбрус">
             <h2 class="element__title">Гора Эльбрус</h2>
             <button class="element__button-like" type="button"></button>
           </li>
           <li class="element">
-            <img class="element__image" src="./images/dombai.jpg" alt="Домбай">
+            <img class="element__image" src="./images/dombai.jpg" alt="Домбай" title="Домбай">
             <h2 class="element__title">Домбай</h2>
             <button class="element__button-like" type="button"></button>
           </li>
           <li class="element">
-            <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаево-Черкессия">
+            <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаево-Черкессия" title="Карачаево-Черкессия">
             <h2 class="element__title">Карачаево-Черкессия</h2>
             <button class="element__button-like" type="button"></button>
           </li>
         </ul>
       </section>
     </main>
+
     <footer class="footer">
       <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
     </footer>
@@ -69,7 +74,7 @@
         <form class="popup__form-profile-edit" name="profileEdit">
           <input class="popup__input-name" type="text" name="name">
           <input class="popup__input-job" type="text" name="job">
-          <input class="popup__submit" type="submit">
+          <input class="popup__submit" type="submit" value="Сохранить">
         </form>
       </div>
     </div>
