--- a/index.html
+++ b/index.html
@@ -1,88 +1,122 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="Россия, Место, JS, Яндекс, Практикум">
-  <meta name="description" content="Mesto | ПР4 | Яндекс Практикум">
-  <meta name="author" content="Кирилл Чистов">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Россия, Место, JS, Яндекс, Практикум">
+    <meta name="description" content="Mesto | ПР5 | Яндекс Практикум">
+    <meta name="author" content="Кирилл Чистов">
+    <link rel="stylesheet" href="./pages/index.css">
+    <title>Проект Mesto. (Я. Практикум / JS / Sprint 5)</title>
+  </head>
 
-  <link rel="stylesheet" href="./pages/index.css">
-  <title>Проект Mesto. (Я. Практикум / JS / Sprint 4)</title>
-</head>
+  <body class="page">
+    <header class="header">
+      <img class="header__logo" src="./images/logo.svg" alt="Логотип проекта Место">
+    </header>
+    <main class="content">
+      <section class="profile">
+        <img class="profile__avatar" src="./images/avatar.jpg" alt="Жак-Ив Кусто - исследователь океана">
+        <h1 class="profile__name">Жак-Ив Кусто</h1>
+        <p class="profile__job">Исследователь океана</p>
+        <button class="profile__button-edit" type="button" aria-label="Редактировать профиль"></button>
+        <button class="profile__button-add" type="button" aria-label="Добавить место"></button>
+      </section>
 
-<body class="page">
-  <!-- В хедере разобраться с отступами логотипа в адаптиве -->
-  <header class="header">
-    <img class="header__logo" src="./images/logo.svg" alt="Логотип проекта Место">
-  </header>
-  <main class="content">
-    <!-- В профиле надо будет поправить отступы для кнопки редактирования -->
-    <section class="profile">
-      <img class="profile__avatar" src="./images/avatar.jpg" alt="Жак-Ив Кусто - исследователь океана">
-      <h1 class="profile__name">Жак-Ив Кусто</h1>
-      <p class="profile__job">Исследователь океана</p>
-      <button class="profile__button-edit" type="button" aria-label="Редактировать профиль"></button>
-      <button class="profile__button-add" type="button" aria-label="Добавить место"></button>
-    </section>
+      <!-- В галерее будет замена карточек 4-6, в будущем - CRUD карточек -->
+      <section class="gallery">
+        <ul class="elements">
+          <li class="element">
+            <button class="element__button-delete" type="button" aria-label="Удалить карточку"></button>
+            <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевск" title="Карачаевск">
+            <h2 class="element__title">Карачаевск</h2>
+            <button class="element__button-like" type="button" aria-label="Поделиться с друзьями"></button>
+          </li>
+          <li class="element">
+            <button class="element__button-delete" type="button" aria-label="Удалить карточку"></button>
+            <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус" title="Гора Эльбрус">
+            <h2 class="element__title">Гора Эльбрус</h2>
+            <button class="element__button-like" type="button" aria-label="Поделиться с друзьями"></button>
+          </li>
+          <li class="element">
+            <button class="element__button-delete" type="button" aria-label="Удалить карточку"></button>
+            <img class="element__image" src="./images/dombai.jpg" alt="Домбай" title="Домбай">
+            <h2 class="element__title">Домбай</h2>
+            <button class="element__button-like" type="button" aria-label="Поделиться с друзьями"></button>
+          </li>
+          <li class="element">
+            <button class="element__button-delete" type="button" aria-label="Удалить карточку"></button>
+            <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус" title="Гора Эльбрус">
+            <h2 class="element__title">Гора Эльбрус</h2>
+            <button class="element__button-like" type="button" aria-label="Поделиться с друзьями"></button>
+          </li>
+          <li class="element">
+            <button class="element__button-delete" type="button" aria-label="Удалить карточку"></button>
+            <img class="element__image" src="./images/dombai.jpg" alt="Домбай" title="Домбай">
+            <h2 class="element__title">Домбай</h2>
+            <button class="element__button-like" type="button" aria-label="Поделиться с друзьями"></button>
+          </li>
+          <li class="element">
+            <button class="element__button-delete" type="button" aria-label="Удалить карточку"></button>
+            <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаево-Черкессия" title="Карачаевск">
+            <h2 class="element__title">Карачаево-Черкессия</h2>
+            <button class="element__button-like" type="button" aria-label="Поделиться с друзьями"></button>
+          </li>
 
-    <!-- В галерее будет замена карточек 4-6, в будущем - CRUD карточек -->
-    <section class="gallery">
-      <ul class="elements">
-        <li class="element">
-          <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаевск" title="Карачаевск">
-          <h2 class="element__title">Карачаевск</h2>
-          <button class="element__button-like" type="button" aria-label="Поделиться с друзьями"></button>
-        </li>
-        <li class="element">
-          <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус" title="Гора Эльбрус">
-          <h2 class="element__title">Гора Эльбрус</h2>
-          <button class="element__button-like" type="button" aria-label="Поделиться с друзьями"></button>
-        </li>
-        <li class="element">
-          <img class="element__image" src="./images/dombai.jpg" alt="Домбай" title="Домбай">
-          <h2 class="element__title">Домбай</h2>
-          <button class="element__button-like" type="button" aria-label="Поделиться с друзьями"></button>
-        </li>
-        <li class="element">
-          <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус" title="Гора Эльбрус">
-          <h2 class="element__title">Гора Эльбрус</h2>
-          <button class="element__button-like" type="button" aria-label="Поделиться с друзьями"></button>
-        </li>
-        <li class="element">
-          <img class="element__image" src="./images/dombai.jpg" alt="Домбай" title="Домбай">
-          <h2 class="element__title">Домбай</h2>
-          <button class="element__button-like" type="button" aria-label="Поделиться с друзьями"></button>
-        </li>
-        <li class="element">
-          <img class="element__image" src="./images/karachaevsk.jpg" alt="Карачаево-Черкессия"
-            title="Карачаево-Черкессия">
-          <h2 class="element__title">Карачаево-Черкессия</h2>
-          <button class="element__button-like" type="button" aria-label="Поделиться с друзьями"></button>
-        </li>
-      </ul>
-    </section>
-  </main>
+        </ul>
+      </section>
+    </main>
 
-  <footer class="footer">
-    <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
-  </footer>
+    <footer class="footer">
+      <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
+    </footer>
 
-  <!-- Вызываем скрипт и молимся -->
-  <div class="popup">
-    <div class="popup__container">
-      <button class="popup__close" type="button" aria-label="Закрыть"></button>
-      <h2 class="popup__header">Редактировать профиль</h2>
-      <form class="popup__form" name="profileEdit">
-        <input class="popup__input popup__input_user_name" type="text" name="name">
-        <input class="popup__input popup__input_user_job" type="text" name="job">
-        <input class="popup__submit" type="submit" value="Сохранить">
-      </form>
+    <!--  Поп-ап с формой редактирования галереи -->
+    <div class="popup">
+      <div class="popup__container">
+        <button class="popup__close" type="button" aria-label="Закрыть"></button>
+        <h2 class="popup__header">Редактировать профиль</h2>
+        <form class="popup__form" name="profileEdit">
+          <input class="popup__input popup__input_user_name" type="text" name="name" placeholder="Автор">
+          <input class="popup__input popup__input_user_job" type="text" name="job" placeholder="Профессия">
+          <input class="popup__submit" type="submit" value="Сохранить">
+        </form>
+      </div>
     </div>
-  </div>
-  <!-- Вызываем скрипт и молимся -->
-  <script src="./js/index.js"></script>
-</body>
+    <!--  / Поп-ап с формой редактирования галереи -->
+
+    <!--  Поп-ап с формой редактирования галереи -->
+    <div class="popup popup__add_place">
+      <div class="popup__container popup__card_place">
+        <button class="popup__close popup__close_card_place" type="button" aria-label="Закрыть"></button>
+        <h2 class="popup__header_place">Новое место</h2>
+        <form class="popup__form" name="addPlace">
+          <input class="popup__input popup__input_place_name" type="text" placeholder="Название">
+          <input class="popup__input popup__input_place_link" type="text" placeholder="Ссылка на иллюстрацию">
+          <input class="popup__submit" type="submit" value="Сохранить">
+  <!--    <button class="popup__input-save_place" type="submit">Сохранить</button> -->
+        </form>
+      </div>
+    </div>
+    <!-- / Поп-ап с формой редактирования галереи -->
+
+    <!-- Шаблон карточки галереи (элемент списка) -->
+    <template class="card-template">
+      <li class="element">
+        <button class="element__button-delete" type="button"></button>
+        <img class="element__image" src="" alt="Одно из любимых мест">
+        <h2 class="element__title"></h2>
+        <button class="element__button-like" type="button" aria-label="Поделиться с друзьями"></button>
+      </li>
+    </template>
+
+    <!-- / Шаблон карточки галереи (элемент списка) -->
+
+
+    <!-- Вызываем скрипт и молимся -->
+    <script src="./js/index.js"></script>
+  </body>
 
 </html>
