--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="popup popup__photo_element" id="popupElement">
       <figure class="popup__container popup__container-photo">
         <button class="popup__close popup__close_photo-container" type="button" aria-label="Закрыть" id="btnPopupElementClose"></button>
-        <img class="popup__image photo__item" src="" alt="Фото места">
+        <img class="popup__image photo__item" src="https://kirillchistov.github.io/mesto/images/elbrus.jpg" alt="Фото места">
         <figcaption class="popup__image-caption">Место</figcaption>
       </figure>
     </div>
@@ -82,7 +82,7 @@
     <template class="element__template" id="elementTemplate">
       <li class="element photo__item">
         <button class="element__button-delete" type="button"></button>
-        <img class="element__image" src="" alt="Одно из любимых мест">
+        <img class="element__image" src="https://kirillchistov.github.io/mesto/images/elbrus.jpg" alt="Одно из любимых мест">
         <h2 class="element__title popup__image-caption"></h2>
         <button class="element__button-like" type="button" aria-label="Поделиться с друзьями"></button>
       </li>
