--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <!--  / Поп-ап с формой редактирования профиля -->
 
     <!--  Поп-ап для просмотра карточки места - надо бы figure + figcaption -->
-    <div class="popup popup__photo_element" id="popupElement">
+    <div class="popup popup__element" id="popupElement">
       <figure class="popup__container popup__container-photo">
         <button class="popup__close popup__close_photo-container" type="button" aria-label="Закрыть" id="btnPopupElementClose"></button>
-        <img class="popup__image photo__item" src="https://kirillchistov.github.io/mesto/images/elbrus.jpg" alt="Фото места">
+        <img class="popup__image" src="https://kirillchistov.github.io/mesto/images/elbrus.jpg" alt="Фото места">
         <figcaption class="popup__image-caption">Место</figcaption>
       </figure>
     </div>
@@ -65,14 +65,14 @@
 
 
     <!--  Поп-ап с формой добавления нового места -->
-    <div class="popup popup__add_place" id="popupAddPlace">
+    <div class="popup popup__add-place" id="popupAddPlace">
       <div class="popup__container">
-        <button class="popup__close popup__close_add_place" type="button" aria-label="Закрыть"></button>
+        <button class="popup__close popup__close_add-place" type="button" aria-label="Закрыть"></button>
         <h2 class="popup__header popup__header_place">Новое место</h2>
         <form class="popup__form popup__form_add_place" name="addPlace" id="formAddPlace">
           <input class="popup__input popup__input_place_name" type="text" placeholder="Название">
           <input class="popup__input popup__input_place_link" type="text" placeholder="Ссылка на иллюстрацию">
-          <input class="popup__submit popup__add_place_submit" type="submit" value="Сохранить" id="btnPopupAddPlaceSubmit">
+          <input class="popup__submit popup__add-place_submit" type="submit" value="Сохранить" id="btnPopupAddPlaceSubmit">
         </form>
       </div>
     </div>
@@ -80,7 +80,7 @@
 
     <!-- Шаблон карточки места (элемент списка) -->
     <template class="element__template" id="elementTemplate">
-      <li class="element photo__item">
+      <li class="element">
         <button class="element__button-delete" type="button"></button>
         <img class="element__image" src="https://kirillchistov.github.io/mesto/images/elbrus.jpg" alt="Одно из любимых мест">
         <h2 class="element__title popup__image-caption"></h2>
