--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </footer>
 
     <!--  Поп-ап с формой редактирования профиля -->
-    <div class="popup popup__profile" id="popupProfile">
+    <div class="popup" id="popupProfile">
       <div class="popup__container">
-        <button class="popup__close popup__profile_close" type="button" aria-label="Закрыть" id="btnPopupProfileClose"></button>
+        <button class="popup__close" type="button" aria-label="Закрыть" id="btnPopupProfileClose"></button>
         <h2 class="popup__header">Редактировать профиль</h2>
         <form class="popup__form popup__form_profile" name="profileEdit" id="formProfileEdit">
           <input class="popup__input popup__input_user_name" type="text" name="name" placeholder="Автор">
@@ -75,7 +75,7 @@
           <form class="popup__form popup__form_add_place" name="addPlace" id="formAddPlace">
             <input class="popup__input popup__input_place_name" type="text" placeholder="Название">
             <input class="popup__input popup__input_place_link" type="text" placeholder="Ссылка на иллюстрацию">
-            <input class="popup__submit popup__add-place_submit" type="submit" value="Сохранить" id="btnPopupAddPlaceSubmit">
+            <input class="popup__submit" type="submit" value="Сохранить" id="btnPopupAddPlaceSubmit">
           </form>
         </div>
       </div>
