--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Mesto | ПР5 | Яндекс Практикум">
     <meta name="author" content="Кирилл Чистов">
     <link rel="stylesheet" href="./pages/index.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <title>Проект Mesto. (Я. Практикум / JS / Sprint 5)</title>
   </head>
 
@@ -73,8 +74,8 @@
           <button class="popup__close popup__close_add-place" type="button" aria-label="Закрыть"></button>
           <h2 class="popup__header popup__header_place">Новое место</h2>
           <form class="popup__form popup__form_add_place" name="addPlace" id="formAddPlace">
-            <input class="popup__input popup__input_place_name" type="text" placeholder="Название">
-            <input class="popup__input popup__input_place_link" type="text" placeholder="Ссылка на иллюстрацию">
+            <input class="popup__input popup__input_place_name" type="text" required placeholder="Название">
+            <input class="popup__input popup__input_place_link" type="url" required placeholder="Ссылка на иллюстрацию">
             <input class="popup__submit" type="submit" value="Сохранить" id="btnPopupAddPlaceSubmit">
           </form>
         </div>
