--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="./images/avatar.jpg" alt="Наив Кустов - исследователь океанариумов">
-        <h1 class="profile__name">Наив Кустов</h1>
-        <p class="profile__job">Исследователь океанариумов</p>
-        <button class="profile__button-edit" type="button" aria-label="Редактировать профиль"></button>
-        <button class="profile__button-add" type="button" aria-label="Добавить место"></button>
+        <div class="profile__image">
+          <img class="profile__avatar" src="./images/avatar.jpg" alt="Наив Кустов - исследователь океанариумов">
+        </div>
+        <div class="profile__info">
+          <div class="profile__user">
+            <h1 class="profile__name">Наив Кустов</h1>
+            <button class="profile__button profile__button-edit" type="button" aria-label="Редактировать профиль"></button>         
+          </div>
+          <p class="profile__job">Исследователь океанариумов</p>
+        </div>
+        <button class="profile__button profile__button-add" type="button" aria-label="Добавить место"></button>
       </section>
 
       <!-- В галерее будет замена карточек 4-6, в будущем - CRUD карточек -->
