--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
             <label class="popup__label">
               <input class="popup__input form__input popup__input_user_name" type="text" id="profile-name" 
                      required minlength="2" maxlength="40" placeholder="Автор">
-              <span class="popup__field-error profile-name-error"></span>
+              <span class="popup__field-error profile-name-error">Введите имя пользователя</span>
             </label>
             <label class="popup__label">
               <input class="popup__input form__input popup__input_user_job" type="text" id="profile-job" 
                      required minlength="2" maxlength="200" placeholder="Профессия">
-              <span class="popup__field-error profile-job-error">Ошибка</span>
+              <span class="popup__field-error profile-job-error">Введите профиль пользователя</span>
             </label>
             <input class="popup__submit form__submit popup__button popup__submit_profile" type="submit" value="Сохранить" id="btnPopupProfileSubmit">
           </fieldset>
@@ -93,12 +93,13 @@
             <fieldset class="popup__fieldset">
               <label class="popup__label">
                 <input class="popup__input form__input popup__input_place_name" minlength="2" maxlength="30" type="text" 
-                      required placeholder="Название" name="new-card-title" id="new-card-title">
-                <span class="popup__field-error new-card-title-error"></span>
+                      required placeholder="Название места" name="new-card-title" id="new-card-title">
+                <span class="popup__field-error new-card-title-error">Введите название места</span>
+              </label>
               <label class="popup__label">
                 <input class="popup__input form__input popup__input_place_link" type="url" 
                        required placeholder="Ссылка на иллюстрацию" name="new-card-source" id="new-card-source">
-                <span class="popup__field-error new-card-source-error">Ошибка</span>
+                <span class="popup__field-error new-card-source-error">Введите URL картинки</span>
               </label>
               <input class="popup__submit form__submit popup__button" type="submit" value="Сохранить" id="btnPopupAddPlaceSubmit"
                      name="new-card-save-btn" >
@@ -123,6 +124,7 @@
 
 
     <!-- Вызываем скрипт и молимся -->
+    <script src="./js/validate.js"></script>
     <script src="./js/cards.js"></script>
     <script src="./js/index.js"></script>
   </body>
