--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
         <form class="popup__form popup__form_profile" name="profileEdit" id="formProfileEdit" novalidate>
           <fieldset class="popup__fieldset">
             <label class="popup__label">
-              <input class="popup__input form__input popup__input_user_name" type="text" id="profile-name" 
+              <input class="popup__input popup__input_user_name" type="text" id="profile-name" 
                      required minlength="2" maxlength="40" placeholder="Автор">
               <span class="popup__field-error profile-name-error">Введите имя пользователя</span>
             </label>
             <label class="popup__label">
-              <input class="popup__input form__input popup__input_user_job" type="text" id="profile-job" 
+              <input class="popup__input popup__input_user_job" type="text" id="profile-job" 
                      required minlength="2" maxlength="200" placeholder="Профессия">
               <span class="popup__field-error profile-job-error">Введите профиль пользователя</span>
             </label>
-            <input class="popup__submit form__submit popup__button popup__submit_profile" type="submit" value="Сохранить" id="btnPopupProfileSubmit">
+            <input class="popup__submit popup__button popup__submit_profile" type="submit" value="Сохранить" id="btnPopupProfileSubmit">
           </fieldset>
         </form>
       </div>
@@ -92,16 +92,16 @@
           <form class="popup__form popup__form_add_place" name="addPlace" id="formAddPlace" novalidate>
             <fieldset class="popup__fieldset">
               <label class="popup__label">
-                <input class="popup__input form__input popup__input_place_name" minlength="2" maxlength="30" type="text" 
+                <input class="popup__input popup__input_place_name" minlength="2" maxlength="30" type="text" 
                       required placeholder="Название места" name="new-card-title" id="new-card-title">
                 <span class="popup__field-error new-card-title-error">Введите название места</span>
               </label>
               <label class="popup__label">
-                <input class="popup__input form__input popup__input_place_link" type="url" 
+                <input class="popup__input popup__input_place_link" type="url" 
                        required placeholder="Ссылка на иллюстрацию" name="new-card-source" id="new-card-source">
                 <span class="popup__field-error new-card-source-error">Введите URL картинки</span>
               </label>
-              <input class="popup__submit form__submit popup__button" type="submit" value="Сохранить" id="btnPopupAddPlaceSubmit"
+              <input class="popup__submit popup__button" type="submit" value="Сохранить" id="btnPopupAddPlaceSubmit"
                      name="new-card-save-btn" >
             </fieldset>
           </form>
