PR6 release 2.1 review comments fixed

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!--  / Поп-ап с формой редактирования профиля -->
 
     <!--  Поп-ап для просмотра карточки места -->
-    <div class="popup" id="popupElement">
+    <div class="popup popoup_type_photo" id="popupElement">
       <div class="popup__element">
         <figure class="popup__container-photo">
           <button class="popup__close popup__close_photo-container" type="button" aria-label="Закрыть" id="btnPopupElementClose"></button>
@@ -102,7 +102,7 @@
                 <span class="popup__field-error new-card-source-error">Введите URL картинки</span>
               </label>
               <input class="popup__submit popup__button" type="submit" value="Сохранить" id="btnPopupAddPlaceSubmit"
-                     name="new-card-save-btn" >
+                     name="new-card-save-btn" disabled >
             </fieldset>
           </form>
         </div>
