PR6 release 2.2 review comments fixed

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!--  / Поп-ап с формой редактирования профиля -->
 
     <!--  Поп-ап для просмотра карточки места -->
-    <div class="popup popup__photo" id="popupElement">
+    <div class="popup popup_view-photo" id="popupElement">
       <div class="popup__element">
         <figure class="popup__container-photo">
           <button class="popup__close popup__close_photo-container" type="button" aria-label="Закрыть" id="btnPopupElementClose"></button>
