--- a/src/index.html
+++ b/src/index.html
@@ -96,12 +96,12 @@
             <fieldset class="popup__fieldset">
               <label class="popup__label">
                 <input class="popup__input popup__input_place_name" minlength="2" maxlength="30" type="text" 
-                      required placeholder="Название места" name="new-card-title" id="new-card-title">
+                      required placeholder="Название места" name="name" id="new-card-title">
                 <span class="popup__field-error new-card-title-error">Введите название места</span>
               </label>
               <label class="popup__label">
                 <input class="popup__input popup__input_place_link" type="url" 
-                       required placeholder="Ссылка на иллюстрацию" name="new-card-source" id="new-card-source">
+                       required placeholder="Ссылка на иллюстрацию" name="link" id="new-card-source">
                 <span class="popup__field-error new-card-source-error">Введите URL картинки</span>
               </label>
               <input class="popup__submit popup__button" type="submit" value="Сохранить" id="btnPopupAddPlaceSubmit"
