--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
       <div class="popup__element">
         <figure class="popup__container-photo">
           <button class="popup__close popup__close_photo-container" type="button" aria-label="Закрыть" id="btnPopupElementClose"></button>
-          <img class="popup__image" src="https://kirillchistov.github.io/mesto/images/elbrus.jpg" alt="Фото места">
+          <img class="popup__image" src="#" alt="Фото места">
           <figcaption class="popup__image-caption">Место</figcaption>
         </figure>
       </div>
