--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
     <!-- Отключаем вызов index.css, т.к. будет вызов через webpack -->
     <!--    <link rel="stylesheet" href="./pages/index.css"> -->
-    <!--    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">  -->
+    <!--    link rel="icon" type="image/x-icon" href="./images/favicon.ico"  -->
     <title>Проект Mesto. (Я. Практикум / JS / Sprint 8)</title>
   </head>
 
